package edu.fiuba.algo3.modelo.Entidad.Estructura.Criadero;

public interface GeneraLarva {
    void generarLarva();

    void usarLarva();
}
